--- a/ClientApp/src/app/radio-button/radio-button.component.html
+++ b/ClientApp/src/app/radio-button/radio-button.component.html
@@ -1,20 +1,20 @@
 
 <form >
     <div class="form-check">
-        <input class="form-check-input" id="override" name="radioButtons" type="radio" value="option1" >
+        <input class="form-check-input" name="radioButtons" type="radio"  >
         <label class="form-check-label" for="override" >
             100% override
         </label> 
     </div>
     <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioButtons" id="partialupdate"  value="option2" checked>
+        <input class="form-check-input" type="radio" name="radioButtons"  checked>
         <label class="form-check-label" for="partialupdate" >
             Partial update
         </label>
     </div>
     
     <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioButtons" id="validate" value="option3">
+        <input class="form-check-input" type="radio" name="radioButtons">
         <label class="form-check-label" for="validate">
             Validate
         </label>
