--- a/ClientApp/src/app/custom-bulk-update/custom-bulk-update.component.html
+++ b/ClientApp/src/app/custom-bulk-update/custom-bulk-update.component.html
@@ -13,183 +13,7 @@
                 </a>
             </div>
             <div id="collapseOne" class="card-body collapse" data-parent="#accordion">
-                <table class="table table-bordered">
-                    <thead>
-                      <tr>
-                        <th>Employee SOH Questions</th>
-                        <th>Answer</th>
-                        <th>Spouse SOH Questions</th>
-                        <th>Answer</th>
-                        <th>Child SOH Questions</th>
-                        <th>Answer</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                        <!-- First row-->
-                      <tr>
-                        <td>Employee Question 1</td>
-                        <td>
-                            <div style="text-align: center;">
-                                <input type="checkbox" id="customCheck1E">
-                                <label for="customCheck1E" style="margin-left: 2px;">Y</label>
-                            </div>
-                        </td>
-                        <td>Spouse Question 1</td>
-                        <td>
-                            <div style="text-align: center;">
-                                <input type="checkbox" id="customCheck1S">
-                                <label for="customCheck1S" style="margin-left: 2px;">Y</label>
-                            </div>
-                        </td>
-                        <td>Child First Name 01</td>
-                        <td>
-                            <div style="text-align: center;">
-                                <input type="checkbox" id="customCheck1C">
-                                <label for="customCheck1C" style="margin-left: 2px;">Y</label>
-                            </div>
-                        </td>
-                      </tr>
-                      <!-- Second row-->
-                      <tr>
-                        <td>Employee Question 2</td>
-                        <td>
-                            <div style="text-align: center;">
-                                <input type="checkbox" id="customCheck2E">
-                                <label for="customCheck2E" style="margin-left: 2px;">Y</label>
-                            </div>
-                        </td>
-                        <td>Spouse Question 2</td>
-                        <td>
-                            <div style="text-align: center;">
-                                <input type="checkbox" id="customCheck2S">
-                                <label for="customCheck2S" style="margin-left: 2px;">Y</label>
-                            </div>
-                        </td>
-                        <td>Child Last Name 01</td>
-                        <td>
-                            <div style="text-align: center;">
-                                <input type="checkbox" id="customCheck2C">
-                                <label for="customCheck2C" style="margin-left: 2px;">Y</label>
-                            </div>
-                        </td>
-                      </tr>
-                     <!--Third row-->
-                     <tr>
-                        <td>Employee Question 3A</td>
-                        <td>
-                            <div style="text-align: center;">
-                                <input type="checkbox" id="customCheck1E">
-                                <label for="customCheck1E" style="margin-left: 2px;">Y</label>
-                            </div>
-                        </td>
-                        <td>Spouse Question 3A</td>
-                        <td>
-                            <div style="text-align: center;">
-                                <input type="checkbox" id="customCheck1S">
-                                <label for="customCheck1S" style="margin-left: 2px;">Y</label>
-                            </div>
-                        </td>
-                        <td>Child Date of Birth 01</td>
-                        <td>
-                            <div style="text-align: center;">
-                                <input type="checkbox" id="customCheck1C">
-                                <label for="customCheck1C" style="margin-left: 2px;">Y</label>
-                            </div>
-                        </td>
-                      </tr>
-                      <!-- Fourth row-->
-                      <tr>
-                        <td>Employee Question 3B</td>
-                        <td>
-                            <div style="text-align: center;">
-                                <input type="checkbox" id="customCheck1E">
-                                <label for="customCheck1E" style="margin-left: 2px;">Y</label>
-                            </div>
-                        </td>
-                        <td>Spouse Question 3B</td>
-                        <td>
-                            <div style="text-align: center;">
-                                <input type="checkbox" id="customCheck1S">
-                                <label for="customCheck1S" style="margin-left: 2px;">Y</label>
-                            </div>
-                        </td>
-                        <td>Child Gender 01</td>
-                        <td>
-                            <div style="text-align: center;">
-                                <input type="checkbox" id="customCheck1C">
-                                <label for="customCheck1C" style="margin-left: 2px;">Y</label>
-                            </div>
-                        </td>
-                      </tr>
-                      <!-- fifth row-->
-                      <tr>
-                        <td>Employee Question 3C</td>
-                        <td>
-                            <div style="text-align: center;">
-                                <input type="checkbox" id="customCheck1E">
-                                <label for="customCheck1E" style="margin-left: 2px;">Y</label>
-                            </div>
-                        </td>
-                        <td>Spouse Question 3C</td>
-                        <td>
-                            <div style="text-align: center;">
-                                <input type="checkbox" id="customCheck1S">
-                                <label for="customCheck1S" style="margin-left: 2px;">Y</label>
-                            </div>
-                        </td>
-                        <td></td>
-                        <td></td>
-                      </tr>
-                      <!-- 6th row-->
-                      <tr>
-                        <td>Employee Question 4</td>
-                        <td>
-                            <div style="text-align: center;">
-                                <input type="checkbox" id="customCheck1E">
-                                <label for="customCheck1E" style="margin-left: 2px;">Y</label>
-                            </div>
-                        </td>
-                        <td>Spouse Question 4</td>
-                        <td>
-                            <div style="text-align: center;">
-                                <input type="checkbox" id="customCheck1S">
-                                <label for="customCheck1S" style="margin-left: 2px;">Y</label>
-                            </div>
-                        </td>
-                        <td></td>
-                        <td></td>
-                      </tr>
-                      <!-- 7th row-->
-                      <tr>
-                        <td>Employee Question 5</td>
-                        <td>
-                            <div style="text-align: center;">
-                                <input type="checkbox" id="customCheck1E">
-                                <label for="customCheck1E" style="margin-left: 2px;">Y</label>
-                            </div>
-                        </td>
-                        <td>Spouse Question 5</td>
-                        <td>
-                            <div style="text-align: center;">
-                                <input type="checkbox" id="customCheck1S">
-                                <label for="customCheck1S" style="margin-left: 2px;">Y</label>
-                            </div>
-                        </td>
-                        <td></td>
-                        <td></td>
-                      </tr>
-                      <tr>
-                          <td><app-radio-button></app-radio-button></td>
-                          <td></td>
-                          <td><app-radio-button></app-radio-button></td>
-                          <td></td>
-                          <td><app-radio-button></app-radio-button></td>
-                          <td></td>
-                      </tr>
-
-                    </tbody>
-                </table>
-                 
+               <app-fppg-questions></app-fppg-questions>
             </div>
         </div>
     </div>
@@ -202,71 +26,46 @@
                 </a>
             </div>
             <div id="collapseTwo" class="card-body collapse" data-parent="#accordion">
-                <table class="table table-bordered">
-                    <thead>
-                      <tr>
-                        <th>Employee SOH Questions</th>
-                        <th>Answer</th>
-                        <th>Spouse SOH Questions</th>
-                        <th>Answer</th>
-                        <th>Child SOH Questions</th>
-                        <th>Answer</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                        <!-- First row-->
-                      <tr>
-                        <td>Employee Question 1</td>
-                        <td>
-                            <div>
-                                <input type="checkbox" id="customCheck1E" checked>
-                                <label for="customCheck1E" style="margin-left: 2px;">Y/N</label>
-                            </div>
-                        </td>
-                        <td>Spouse Question 1</td>
-                        <td>
-                            <div>
-                                <input type="checkbox" id="customCheck1S" checked>
-                                <label for="customCheck1S" style="margin-left: 2px;">Y/N</label>
-                            </div>
-                        </td>
-                        <td>Child First Name 01</td>
-                        <td>
-                            <div>
-                                <input type="checkbox" id="customCheck1C" checked>
-                                <label for="customCheck1C" style="margin-left: 2px;">Y/N</label>
-                            </div>
-                        </td>
-                      </tr>
-                      <!-- Second row-->
-                      <tr>
-                        <td>Employee Question 2</td>
-                        <td>
-                            <div>
-                                <input type="checkbox" id="customCheck2E" checked>
-                                <label for="customCheck2E" style="margin-left: 2px;">Y/N</label>
-                            </div>
-                        </td>
-                        <td>Spouse Question 2</td>
-                        <td>
-                            <div>
-                                <input type="checkbox" id="customCheck2S" checked>
-                                <label for="customCheck2S" style="margin-left: 2px;">Y/N</label>
-                            </div>
-                        </td>
-                        <td>Child Last Name 01</td>
-                        <td>
-                            <div>
-                                <input type="checkbox" id="customCheck2C" checked>
-                                <label for="customCheck2C" style="margin-left: 2px;">Y/N</label>
-                            </div>
-                        </td>
-                      </tr>
-                     
-                     
-                    </tbody>
-                </table>
-                 
+               <app-fppi-questions></app-fppi-questions>
+            </div>
+        </div>
+    </div>
+    <!-- 3rd Product -->
+    <div id="accordion" class="accordion">
+        <div class="card mt-2" style="cursor: pointer;">
+            <div class="card-header collapsed mb-2" data-toggle="collapse" href="#collapseThree">
+                <a class="card-title">
+                    Vol Group Life
+                </a>
+            </div>
+            <div id="collapseThree" class="card-body collapse" data-parent="#accordion">
+               <app-vol-group-life-questions></app-vol-group-life-questions>
+            </div>
+        </div>
+    </div>
+    <!-- 4th Product -->
+    <div id="accordion" class="accordion">
+        <div class="card mt-2" style="cursor: pointer;">
+            <div class="card-header collapsed mb-2" data-toggle="collapse" href="#collapseFour">
+                <a class="card-title">
+                    Basic Group Life
+                </a>
+            </div>
+            <div id="collapseFour" class="card-body collapse" data-parent="#accordion">
+               <app-basic-group-life-questions></app-basic-group-life-questions>
+            </div>
+        </div>
+    </div>
+    <!-- 5th Product -->
+    <div id="accordion" class="accordion">
+        <div class="card mt-2" style="cursor: pointer;">
+            <div class="card-header collapsed mb-2" data-toggle="collapse" href="#collapseFive">
+                <a class="card-title">
+                    Voluntary CI
+                </a>
+            </div>
+            <div id="collapseFive" class="card-body collapse" data-parent="#accordion">
+               <app-voluntary-ci-questions></app-voluntary-ci-questions>
             </div>
         </div>
     </div>
