--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -7,7 +7,7 @@
         
         <div class="col-3">
           <span class="label label-default">Group Effective Date</span>
-          <input type="date" [(ngModel)]="grpEfftvDate" formControlName="FCfppgEffectiveDate" [value]="dateValue" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
+          <input type="date"  formControlName="FCfppgEffectiveDate" [value]="dateValue" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
             placeholder="Group Effective Date">
 
         </div>
@@ -35,7 +35,7 @@
 
           <span class="label label-default">Employee GI Amount Max</span>
 
-          <input type="text" [(ngModel)]="empGiMaxAmt"  formControlName="FCfppgEmpGIAmtMax" class="form-control mb-2 " style="width: 100%;" placeholder="Employee GI Amount Max">
+          <input type="text"   formControlName="FCfppgEmpGIAmtMax" class="form-control mb-2 " style="width: 100%;" placeholder="Employee GI Amount Max">
         </div>
 
 
@@ -43,7 +43,7 @@
         <div class="col-3">
           <span class="label label-default">Employee QI Amount Max</span>
 
-          <input type="text" formControlName="FCfppgEmpQIAmtMax" class="form-control mb-2 " style="width: 100%;" placeholder="Employee QI Amount Max">
+          <input type="text"  formControlName="FCfppgEmpQIAmtMax" class="form-control mb-2 " style="width: 100%;" placeholder="Employee QI Amount Max">
         </div>
         <div class="col-3">
           <span class="label label-default">Employee Max Amount</span>
