--- a/ClientApp/src/app/group-setup/group-setup.component.html
+++ b/ClientApp/src/app/group-setup/group-setup.component.html
@@ -204,3 +204,7 @@
   <button type="submit" class="btn btn-success mt-4 mb-4" style="float: right;" (click)="onSubmit()">Submit Group
     Setup Information</button>
     </div>
+
+    <!-- <div>
+      {{eppData}}
+    </div> -->
