--- a/ClientApp/src/app/agent-setup/agent-setup.component.html
+++ b/ClientApp/src/app/agent-setup/agent-setup.component.html
@@ -11,7 +11,7 @@
             </div>
             <div class="col-md-3">
                 <span class ="label label-default">Agent SubCount</span>
-                <input type="text" class="form-control mb-2"  style="width: 100%;" 
+                <input type="text" class="form-control mb-2" [value]="text"  style="width: 100%;" 
                     placeholder="Agent SubCount">
             </div>
             <div class="col-md-3">
