--- a/ClientApp/src/app/radio-button/radio-button.component.html
+++ b/ClientApp/src/app/radio-button/radio-button.component.html
@@ -1,24 +1,12 @@
 
 <form >
-    <div class="form-check">
-        <input class="form-check-input" name="radioButtons" type="radio"  >
-        <label class="form-check-label" for="override" >
-            100% override
+    <div class="form-check" *ngFor="let season of seasons.effectiveDate.value">
+        <input #effDate class="form-check-input" value="{{season}}" name="season" type="radio" 
+        (change)="onRadioButtonSelect($event)"  >
+        <label class="form-check-label"  >
+            {{season}}
         </label> 
     </div>
-    <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioButtons"  checked>
-        <label class="form-check-label" for="partialupdate" >
-            Partial update
-        </label>
-    </div>
-    
-    <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioButtons">
-        <label class="form-check-label" for="validate">
-            Validate
-        </label>
-      </div>
 </form>
   
 
