--- a/ClientApp/src/app/group-setup/group-setup.component.html
+++ b/ClientApp/src/app/group-setup/group-setup.component.html
@@ -204,9 +204,9 @@
   <button type="submit" class="btn btn-success mt-4 mb-4" style="float: right;" (click)="onSubmit()">Submit Group
     Setup Information</button>
     </div>
-    <div class="footer-container">
+    <!-- <div class="footer-container">
       <button pButton type="button" label="Submit Payment" class="x-primary-green-400" (click)="onSubmitPayment()">Submit</button>
-  </div>
+  </div> -->
 
     <!-- <div>
       {{eppData}}
