--- a/ClientApp/src/app/group-setup/group-setup.component.html
+++ b/ClientApp/src/app/group-setup/group-setup.component.html
@@ -31,7 +31,7 @@
   <div class="row">
     <div class="form-group col-md-3">
       <span class="label label-default">Group Number</span>
-      <input type="number" max="5" class="form-control mb-2" [(ngModel)]="groupNumber" style="width: 100%;"
+      <input type="text" maxLength="5" class="form-control mb-2" [(ngModel)]="groupNumber" style="width: 100%;"
         placeholder="Group Number Field">
     </div>
     <div class="form-group col-md-3">
