--- a/ClientApp/src/app/radio-button/radio-button.component.html
+++ b/ClientApp/src/app/radio-button/radio-button.component.html
@@ -1,8 +1,8 @@
 
 <form >
-    <div class="form-check" *ngFor="let season of seasons.effectiveDate.value">
+    <div class="form-check" *ngFor="let season of seasons.effectiveDate.value; let index=index">
         <input #effDate class="form-check-input" value="{{season}}" name="season" type="radio" 
-        (change)="onRadioButtonSelect($event)"  >
+        (change)="onRadioButtonSelect($event,index)"  >
         <label class="form-check-label"  >
             {{season}}
         </label> 
